functionality update and code clean up

--- a/src/app/users-list/users-list.component.html
+++ b/src/app/users-list/users-list.component.html
@@ -1,6 +1,5 @@
-<p>users-list works!</p>
+<div style="text-align: center;">List of Users</div>
 <ag-grid-angular
-
 class="ag-theme-balham grid-wrapper"
 [rowData]="rowData"
 [columnDefs]="columnDefs"
