--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,5 +1,5 @@
-<p>search works!</p>
 <div class="example-form">
+  <div>Add User Details Form</div>
   <mat-form-field class="example-full-width">
     <mat-label>First Name</mat-label>
     <input matInput placeholder="first name" [(ngModel)]="firstName">
@@ -11,14 +11,11 @@
   </mat-form-field>
   <mat-form-field class="example-full-width">
     <mat-label>Age</mat-label>
-    <input matInput placeholder="age">
+    <input matInput placeholder="age" [(ngModel)]="age">
   </mat-form-field>
   <mat-form-field class="example-full-width">
     <mat-label>Email</mat-label>
     <input matInput placeholder="email" [(ngModel)]="email">
   </mat-form-field>
-  <!-- <mat-divider></mat-divider> -->
-  <!-- <mat-form-field> -->
-    <input type="button" class="button-wrapper" value="Search" [disabled]="buttonDisable()" (click)="onSearchClicked()">
-  <!-- </mat-form-field> -->
+    <input type="button" class="button-wrapper" value="Add User" [disabled]="buttonDisable()" (click)="onSearchClicked()">
   </div>
